--- a/JUST GIF IT/UI/Storyboards/Main.storyboard
+++ b/JUST GIF IT/UI/Storyboards/Main.storyboard
@@ -36,6 +36,10 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="UOz-6R-PMh"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="QOe-iM-LYy"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
