--- a/JUST GIF IT/UI/Storyboards/Main.storyboard
+++ b/JUST GIF IT/UI/Storyboards/Main.storyboard
@@ -72,6 +72,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="gna-VM-G7t" id="ZJH-sE-6dj"/>
+                        <outlet property="playGifButton" destination="L7J-7o-Sva" id="PZx-gY-PSI"/>
                         <segue destination="8dF-g8-Tee" kind="custom" identifier="toLoginStoryboard" customClass="ReplaceRootSegue" customModule="JUST_GIF_IT" customModuleProvider="target" id="rjz-i1-2bu"/>
                     </connections>
                 </viewController>
@@ -87,10 +88,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PicturePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="YTU-jX-y8J">
-                                <rect key="frame" x="28" y="237.5" width="319" height="212.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PicturePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="YTU-jX-y8J">
+                                <rect key="frame" x="28" y="104.5" width="319" height="478"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="YTU-jX-y8J" secondAttribute="height" multiplier="3:2" id="2Gj-KK-XPq"/>
+                                    <constraint firstAttribute="width" secondItem="YTU-jX-y8J" secondAttribute="height" multiplier="1:1.5" id="2Gj-KK-XPq"/>
                                 </constraints>
                             </imageView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Xon-Yd-QaE">
@@ -98,7 +99,7 @@
                                 <color key="color" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="0.34999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="YTU-jX-y8J" firstAttribute="centerX" secondItem="5cW-jY-cXB" secondAttribute="centerX" id="0KX-Pw-1MX"/>
@@ -125,7 +126,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1073" y="180"/>
+            <point key="canvasLocation" x="1072.8" y="179.46026986506749"/>
         </scene>
         <!--NEW IMAGE-->
         <scene sceneID="juX-FI-bsa">
@@ -134,12 +135,106 @@
                     <view key="view" contentMode="scaleToFill" id="W7j-b6-FY6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.67482946610000005" green="1" blue="0.84405225240000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vm-ZF-IQJ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aGB-UM-Ybf" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="406.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PicturePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="wxJ-xL-1Ng">
+                                                <rect key="frame" x="25" y="25" width="325" height="216.5"/>
+                                                <gestureRecognizers/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="wxJ-xL-1Ng" secondAttribute="height" multiplier="3:2" id="LM2-ZR-RMk"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="J87-12-w8V" appends="YES" id="hcm-d8-b7L"/>
+                                                </connections>
+                                            </imageView>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwL-Ag-t3Z">
+                                                <rect key="frame" x="25" y="266.5" width="325" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="zRV-PS-ydd"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" keyboardAppearance="alert" returnKeyType="next"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="Omm-6E-smr" id="N0i-AN-siL"/>
+                                                </connections>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="#hashtag" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2h3-UR-5SL">
+                                                <rect key="frame" x="25" y="316.5" width="325" height="40"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardAppearance="alert" returnKeyType="done"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="Omm-6E-smr" id="GDs-fy-H5w"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="2h3-UR-5SL" firstAttribute="height" secondItem="RwL-Ag-t3Z" secondAttribute="height" id="6h7-VZ-z4F"/>
+                                            <constraint firstItem="2h3-UR-5SL" firstAttribute="top" secondItem="RwL-Ag-t3Z" secondAttribute="bottom" constant="10" id="B9Q-4G-snf"/>
+                                            <constraint firstItem="RwL-Ag-t3Z" firstAttribute="top" secondItem="wxJ-xL-1Ng" secondAttribute="bottom" constant="25" id="GJd-KX-4xs"/>
+                                            <constraint firstAttribute="bottom" secondItem="2h3-UR-5SL" secondAttribute="bottom" constant="50" id="HUL-A4-eei"/>
+                                            <constraint firstItem="2h3-UR-5SL" firstAttribute="centerX" secondItem="RwL-Ag-t3Z" secondAttribute="centerX" id="OT1-tS-rf7"/>
+                                            <constraint firstItem="RwL-Ag-t3Z" firstAttribute="width" secondItem="wxJ-xL-1Ng" secondAttribute="width" id="PPB-gN-IXW"/>
+                                            <constraint firstItem="wxJ-xL-1Ng" firstAttribute="leading" secondItem="aGB-UM-Ybf" secondAttribute="leading" constant="25" id="QNh-tO-7VX"/>
+                                            <constraint firstItem="2h3-UR-5SL" firstAttribute="width" secondItem="RwL-Ag-t3Z" secondAttribute="width" id="gMg-jB-99n"/>
+                                            <constraint firstItem="RwL-Ag-t3Z" firstAttribute="centerX" secondItem="aGB-UM-Ybf" secondAttribute="centerX" id="lOu-vZ-mfT"/>
+                                            <constraint firstItem="wxJ-xL-1Ng" firstAttribute="top" secondItem="aGB-UM-Ybf" secondAttribute="top" constant="25" id="pcn-j5-lg6"/>
+                                            <constraint firstAttribute="trailing" secondItem="wxJ-xL-1Ng" secondAttribute="trailing" constant="25" id="u9D-x9-Vju"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="aGB-UM-Ybf" firstAttribute="top" secondItem="7Vm-ZF-IQJ" secondAttribute="top" id="CtL-DP-MJg"/>
+                                    <constraint firstAttribute="bottom" secondItem="aGB-UM-Ybf" secondAttribute="bottom" id="ODy-Le-lYq"/>
+                                    <constraint firstItem="aGB-UM-Ybf" firstAttribute="width" secondItem="7Vm-ZF-IQJ" secondAttribute="width" id="TOm-Mz-CI1"/>
+                                    <constraint firstItem="aGB-UM-Ybf" firstAttribute="height" secondItem="7Vm-ZF-IQJ" secondAttribute="height" priority="250" id="sui-B8-7tr"/>
+                                    <constraint firstItem="aGB-UM-Ybf" firstAttribute="leading" secondItem="7Vm-ZF-IQJ" secondAttribute="leading" id="thX-zW-5rr"/>
+                                    <constraint firstAttribute="trailing" secondItem="aGB-UM-Ybf" secondAttribute="trailing" id="yPO-DD-qhc"/>
+                                </constraints>
+                            </scrollView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="9Ne-iC-pGF">
+                                <rect key="frame" x="169" y="347" width="37" height="37"/>
+                                <color key="color" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dCp-uk-azu" firstAttribute="bottom" secondItem="7Vm-ZF-IQJ" secondAttribute="bottom" id="4Kr-yg-W69"/>
+                            <constraint firstItem="7Vm-ZF-IQJ" firstAttribute="top" secondItem="dCp-uk-azu" secondAttribute="top" id="5t8-Uh-DTz"/>
+                            <constraint firstItem="9Ne-iC-pGF" firstAttribute="centerX" secondItem="dCp-uk-azu" secondAttribute="centerX" id="NtX-lt-osc"/>
+                            <constraint firstItem="9Ne-iC-pGF" firstAttribute="centerY" secondItem="dCp-uk-azu" secondAttribute="centerY" id="YcC-ig-9PO"/>
+                            <constraint firstItem="dCp-uk-azu" firstAttribute="trailing" secondItem="7Vm-ZF-IQJ" secondAttribute="trailing" id="hph-t9-WJ6"/>
+                            <constraint firstItem="7Vm-ZF-IQJ" firstAttribute="leading" secondItem="dCp-uk-azu" secondAttribute="leading" id="iFo-te-G57"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dCp-uk-azu"/>
                     </view>
-                    <navigationItem key="navigationItem" title="NEW IMAGE" id="2GY-Bb-ZGx"/>
+                    <navigationItem key="navigationItem" title="NEW IMAGE" id="2GY-Bb-ZGx">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="IQ7-aJ-AwK">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="Omm-6E-smr" id="1nw-tO-l5D"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="activityView" destination="9Ne-iC-pGF" id="kiL-zb-1cA"/>
+                        <outlet property="descriptionTextField" destination="RwL-Ag-t3Z" id="787-sr-rqR"/>
+                        <outlet property="hashtagTextField" destination="2h3-UR-5SL" id="PTu-Ib-kpw"/>
+                        <outlet property="imageView" destination="wxJ-xL-1Ng" id="70k-QQ-RG9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="exO-cp-06g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="J87-12-w8V">
+                    <connections>
+                        <action selector="imageViewDidTape:" destination="Omm-6E-smr" id="9hn-Db-9Pi"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2010" y="-564"/>
         </scene>
