--- a/JUST GIF IT/UI/Storyboards/Main.storyboard
+++ b/JUST GIF IT/UI/Storyboards/Main.storyboard
@@ -41,13 +41,19 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="QOe-iM-LYy"/>
                                 </connections>
                             </collectionView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="inj-OI-EN8">
+                                <rect key="frame" x="169" y="347" width="37" height="37"/>
+                                <color key="color" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gna-VM-G7t" secondAttribute="trailing" id="PLL-MF-Yfg"/>
                             <constraint firstItem="gna-VM-G7t" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ywq-lL-5un"/>
+                            <constraint firstItem="inj-OI-EN8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hwk-nC-MgU"/>
                             <constraint firstItem="gna-VM-G7t" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kfz-0n-AiM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gna-VM-G7t" secondAttribute="bottom" id="tCt-Sd-3PT"/>
+                            <constraint firstItem="inj-OI-EN8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="yyq-Zy-dus"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -71,6 +77,7 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="activityView" destination="inj-OI-EN8" id="Axc-qu-V5f"/>
                         <outlet property="collectionView" destination="gna-VM-G7t" id="ZJH-sE-6dj"/>
                         <outlet property="playGifButton" destination="L7J-7o-Sva" id="PZx-gY-PSI"/>
                         <segue destination="8dF-g8-Tee" kind="custom" identifier="toLoginStoryboard" customClass="ReplaceRootSegue" customModule="JUST_GIF_IT" customModuleProvider="target" id="rjz-i1-2bu"/>
